# ipyoneer

./: LICENSE  README.md  pyproject.toml  test.ipynb
ipyoneer/: __init__.py  code_generator.py  magic.py  timer.py
tests/: test_timer.py
