[tool.poetry]
name = "ipyoneer"
version = "0.1.0"
description = ""
authors = ["elda27 <kaz.birdstick@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^8.0.0"
astor = "^0.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
